able to connect to database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="email">Email</string>
     <string name="name">Name</string>
     <string name="nid">NID</string>
+    <string name="button5">Connect</string>
+    <string name="textview" />
 </resources>
